Sync all local changes: agents, walkthroughs, updated URLs

--- a/agents/transaction-classifier/index.html
+++ b/agents/transaction-classifier/index.html
@@ -551,8 +551,7 @@
     </main>
 
     <footer class="footer">
-        <p>Transaction Classifier Agent | Part of the <a href="../../index.html">Basis Target Intelligence Map</a> project</p>
-        <p style="margin-top: 0.5rem;">Built as a demonstration of AI-powered accounting automation</p>
+        <p>Part of the <a href="../../index.html">Basis Deployed Intelligence</a> application for Jake McCorkle</p>
     </footer>
 
     <script>
